style: prevent text from wrapping outside parent

--- a/src/styles/TaskList.css
+++ b/src/styles/TaskList.css
@@ -32,6 +32,7 @@
 .checkbox {
   position: relative;
   padding: 0px 20px;
+  word-break: break-all;
 }
 
 .checkbox-round {
